--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -45,7 +45,7 @@
           <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          
+
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
@@ -82,7 +82,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
