Added na to have nana

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>To jest moja strona</title>
+    <title>To jest moja stronana</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
